# Practica-1---Estructuras-de-Datos-y-Algoritmos

./: README.md
Practica/: CMakeLists.txt
Practica/data/: dataset.txt
Practica/include/: AVLtree.h  dataset.h  heapsort.h  quicksort.h
Practica/src/: AVLtree.cpp  dataset.cpp  heapsort.cpp  main.cpp  quicksort.cpp
